syntax = "proto3";

package Backend;

option csharp_namespace = "Backend.Api";

service TenantRegistrationService {
    rpc Register(RegisterRequest) returns (EmptyResponse3);
    rpc Claim(ClaimRequest) returns (EmptyResponse3);
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string identifier = 3;    
    string override_token = 4;
}

message ClaimRequest {
    string identifier = 1;
    string password = 2;
    string token =3;
}

message EmptyResponse3{
}